/*
 * Copyright 2024 Jeroen Gremmen
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *   https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

plugins {
  id 'java-library'

  alias(libs.plugins.test.logger)
}


description = 'Stage Runner Framework'
group = 'de.sayayi.lib'
version = libs.versions.stage.runner.get()


layout.buildDirectory = '.build'


configurations {
  optionalApi

  compileClasspath.extendsFrom optionalApi
  runtimeClasspath.extendsFrom optionalApi
  testCompileClasspath.extendsFrom optionalApi
  testRuntimeClasspath.extendsFrom optionalApi
}


java {
  toolchain {
    languageVersion = JavaLanguageVersion.of(21)
  }

  withJavadocJar()
  withSourcesJar()
}


test {
  useJUnitPlatform()

  javaLauncher = javaToolchains.launcherFor {
    languageVersion = JavaLanguageVersion.of(21)
  }
}


compileTestJava {
  options.compilerArgs.add '-parameters'
}


repositories {
  maven {
    url = 'https://central.sonatype.com/repository/maven-snapshots/'

    mavenContent {
      includeGroup 'de.sayayi.lib'
      snapshotsOnly()
    }
  }

  mavenCentral()
}


dependencies {
  // java
  compileOnlyApi libs.jetbrains.annotations

  optionalApi libs.spring.context
  optionalApi libs.byte.buddy


  // test
  testAnnotationProcessor libs.lombok
  testCompileOnly libs.lombok

  testImplementation libs.junit.jupiter
  testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

  testImplementation libs.spring.test
}


tasks.withType(Jar).configureEach {
  includeEmptyDirs = false
  preserveFileTimestamps = true
  reproducibleFileOrder = true

  manifest {
    attributes(
        'Implementation-Vendor': 'Jeroen Gremmen',
        'Implementation-Vendor-Id': 'de.sayayi',
        'Implementation-Title': project.name,
        'Implementation-Version': project.version,
        'Created-By': System.getProperty('java.version'),
        'Built-Date': new Date().format('yyyy-MM-dd HH:mm:ss')
    )
  }

  metaInf {
    from files('LICENSE')
    expand(
        copyright: new Date().format('yyyy'),
        version: project.version)
  }
}


jar.dependsOn test

javadoc.options.addStringOption('Xdoclint:none', '-quiet')


testlogger {
  theme = 'mocha'
  slowThreshold = 2500
}


apply from: file('gradle/publish.gradle')


def snapshot = version.toString().endsWith('-SNAPSHOT')


clean {
  delete layout.projectDirectory.dir('build')
}


wrapper {
  distributionType = Wrapper.DistributionType.BIN
}
